--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>DivisAPP - 22011423</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Convertir Quetzales a Dólares</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="floating">Cantidad en Quetzales</ion-label>
+        <ion-input
+          type="number"
+          [(ngModel)]="cantidadQuetzales"
+          placeholder="Ingrese cantidad">
+        </ion-input>
+      </ion-item>
+      <ion-button expand="full" (click)="convertir()">Convertir</ion-button>
+      <ion-item *ngIf="resultado !== null">
+        <ion-label>
+          <strong>Equivalente en dólares:</strong> {{ resultado | number:'1.2-2' }} USD
+        </ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
